# kind

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: trigger-build.yml
cmake/: allocator.cmake  dependencies.cmake
data/: emoji.json
scripts/: update-emoji.sh
src/: version.hpp.in
src/core/: CMakeLists.txt  cdn_url.hpp  client.cpp  client.hpp  logging.cpp  logging.hpp  mute_state_manager.cpp  mute_state_manager.hpp  permissions.cpp  permissions.hpp  placeholder.cpp  read_state_manager.cpp  read_state_manager.hpp
src/core/auth/: auth_manager.cpp  auth_manager.hpp  keychain_token_store.cpp  keychain_token_store.hpp  token_store.cpp  token_store.hpp
src/core/cache/: database_manager.cpp  database_manager.hpp  database_reader.cpp  database_reader.hpp  database_writer.cpp  database_writer.hpp  disk_cache.cpp  disk_cache.hpp  image_cache.cpp  image_cache.hpp  lru_cache.hpp
src/core/config/: cache_budget.hpp  config_manager.cpp  config_manager.hpp  platform_paths.cpp  platform_paths.hpp
src/core/gateway/: gateway_client.hpp  gateway_events.hpp  heartbeat.cpp  heartbeat.hpp  qt_gateway_client.cpp  qt_gateway_client.hpp
src/core/interfaces/: auth_observer.hpp  gateway_observer.hpp  observer_list.hpp  store_observer.hpp
src/core/json/: parsers.cpp  parsers.hpp
src/core/models/: attachment.hpp  channel.hpp  component.hpp  embed.hpp  embed_types.hpp  guild.hpp  mention.hpp  message.hpp  permission_overwrite.hpp  reaction.hpp  role.hpp  snowflake.hpp  sticker_item.hpp  user.hpp
src/core/proto/: discord_user_settings.proto
src/core/rest/: endpoints.hpp  qt_rest_client.cpp  qt_rest_client.hpp  rate_limiter.cpp  rate_limiter.hpp  rest_client.hpp  rest_error.hpp
src/core/store/: data_store.cpp  data_store.hpp
src/core/text/: emoji_map.cpp  emoji_map.hpp  markdown_parser.cpp  markdown_parser.hpp
src/core/utils/: nonce.hpp
src/gui/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  theme.hpp
src/gui/delegates/: channel_delegate.cpp  channel_delegate.hpp  dm_delegate.cpp  dm_delegate.hpp  guild_delegate.cpp  guild_delegate.hpp  message_delegate.cpp  message_delegate.hpp
src/gui/dialogs/: login_dialog.cpp  login_dialog.hpp  new_dm_dialog.cpp  new_dm_dialog.hpp  preferences_dialog.cpp  preferences_dialog.hpp
src/gui/models/: channel_model.cpp  channel_model.hpp  dm_list_model.cpp  dm_list_model.hpp  guild_model.cpp  guild_model.hpp  message_model.cpp  message_model.hpp  rendered_message.hpp
src/gui/renderers/: attachment_block_renderer.cpp  attachment_block_renderer.hpp  badge_renderer.cpp  badge_renderer.hpp  block_renderer.hpp  component_block_renderer.cpp  component_block_renderer.hpp  component_v2_block_renderer.cpp  component_v2_block_renderer.hpp  divider_renderer.cpp  divider_renderer.hpp  embed_block_renderer.cpp  embed_block_renderer.hpp  ephemeral_notice_renderer.cpp  ephemeral_notice_renderer.hpp  image_strip_renderer.cpp  image_strip_renderer.hpp  reaction_block_renderer.cpp  reaction_block_renderer.hpp  reply_block_renderer.cpp  reply_block_renderer.hpp  rich_text_layout.cpp  rich_text_layout.hpp  sticker_block_renderer.cpp  sticker_block_renderer.hpp  system_message_renderer.cpp  system_message_renderer.hpp  text_block_renderer.cpp  text_block_renderer.hpp
src/gui/widgets/: channel_list.cpp  channel_list.hpp  dm_list.cpp  dm_list.hpp  jump_pill.cpp  jump_pill.hpp  loading_pill.cpp  loading_pill.hpp  message_input.cpp  message_input.hpp  message_view.cpp  message_view.hpp  server_list.cpp  server_list.hpp  status_bar.cpp  status_bar.hpp
src/gui/workers/: render_worker.cpp  render_worker.hpp
src/tui/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  placeholder_test.cpp  test_main.cpp
tests/core/: auth_test.cpp  cdn_url_test.cpp  client_test.cpp  config_test.cpp  database_test.cpp  emoji_map_test.cpp  file_token_store.hpp  gateway_test.cpp  image_cache_test.cpp  json_parsers_test.cpp  lru_cache_test.cpp  markdown_test.cpp  message_parse_test.cpp  models_test.cpp  mute_state_test.cpp  observer_test.cpp  permissions_extended_test.cpp  permissions_test.cpp  read_state_test.cpp  rest_test.cpp  store_test.cpp
tests/gui/: attachment_block_renderer_test.cpp  badge_renderer_test.cpp  channel_model_test.cpp  component_block_renderer_test.cpp  component_v2_block_renderer_test.cpp  divider_renderer_test.cpp  dm_list_model_test.cpp  embed_block_renderer_test.cpp  ephemeral_notice_renderer_test.cpp  guild_model_test.cpp  image_strip_renderer_test.cpp  loading_pill_test.cpp  mention_resolution_test.cpp  message_model_test.cpp  reaction_block_renderer_test.cpp  render_worker_test.cpp  reply_block_renderer_test.cpp  sticker_block_renderer_test.cpp  system_message_renderer_test.cpp  text_block_renderer_test.cpp
tests/integration/: integration_test.cpp  mock_discord_server.cpp  mock_discord_server.hpp
tools/: README.md  pyproject.toml
tools/src/kind_analyze/: __init__.py  account.py  cli.py  db.py  fmt.py  parser.py
tools/src/kind_analyze/analyzers/: __init__.py  cache.py  cdn_health.py  channels.py  gateway.py  images.py  network.py  responsiveness.py  startup.py  summary.py
